examples/errors/not_existent_class_declaration.syntax
Program
  ProgramDeclaration
    ClassName: Main
  ClassDeclarations
    ClassDeclaration
      ClassName: Main
      ClassBody
        MemberDeclarations
          MemberDeclaration
            ConstructorDeclaration
              Body
                BodyDeclarations
                  BodyDeclaration
                    VariableDeclaration
                      Expression
                        CompoundExpression: A
                      VariableName: a
                  BodyDeclaration
                    Assignment
                      Expression
                        CompoundExpression: A
                      VariableName: a
